# fintrack

./: .env.example  .gitignore  deploy.sh  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0a1b2c3d4e5f_add_obligation_monthly_rollover_fields.py  1b2c3d4e5f6a_add_obligation_history_table.py  2c3d4e5f6a7b_add_timezone_to_user_settings.py  3d4e5f6a7b8c_add_category_bucket.py  4e5f6a7b8c9d_add_bucket_to_obligations.py  a1b2c3d4e5f6_add_manually_paid_to_obligations.py  b2c3d4e5f6a7_add_is_variable_to_obligations.py  c3d4e5f6a7b8_drop_is_variable_from_obligations.py  cec68055d876_initial_schema_with_obligations.py  d4e5f6a7b8c9_add_user_settings.py  e5f6a7b8c9d0_add_exchange_rate_to_movements.py  f6a7b8c9d0e1_drop_manually_paid_from_obligations.py
apps/api/app/: config.py  database.py  deps.py  dev_seed.py  main.py  timezone.py
apps/api/app/models/: __init__.py  account.py  category.py  goal.py  movement.py  obligation.py  user.py  user_settings.py
apps/api/app/routers/: accounts.py  auth.py  budgeting.py  categories.py  goals.py  movements.py  obligations.py  user_settings.py
apps/api/app/schemas/: account.py  auth.py  budgeting.py  category.py  goal.py  movement.py  obligation.py  user_settings.py
apps/api/tests/: conftest.py  test_budgeting.py  test_goals.py  test_obligations.py  test_settings.py
infra/: .gitignore  cloudflare_ips.tf  main.tf  outputs.tf  user_data.sh  variables.tf
(+82 files in other folders)
